--- a/app/client/src/index.ejs
+++ b/app/client/src/index.ejs
@@ -3,8 +3,8 @@
 
   <head>
 
-    <script type="text/javascript" src="node_modules/angular/angular.js"></script>
-    <script type="text/javascript" src="app/client/app.js"></script>
+    <script type="text/javascript" src="app/client/public/libs.js"></script>
+    <script type="text/javascript" src="app/client/public/app.js"></script>
 
     <title>James O'Meara</title>
   </head>
