--- a/app/client/src/index.ejs
+++ b/app/client/src/index.ejs
@@ -2,22 +2,63 @@
 <html>
 
   <head>
-
+    <meta charset = "UTF-8">
     <script type="text/javascript" src="libs.js"></script>
     <script type="text/javascript" src="app.js"></script>
+    <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="css/css.css">
+    
 
     <title>James O'Meara</title>
+    
   </head>
 
   <body ng-app="app">
-  	<p> Hello World </p>
 
-    <div ng-app="app" ng-controller="myfirstcontroller">
-      <ul>
-          <li ng-repeat="x in something">{{x}}</li>
-      </ul>
-    </div>
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Project name</a>
+        </div>
+        
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
+
+    <div class="container">
+
+      <div class="starter-template">
+        <h1>Bootstrap starter template</h1>
+        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+      </div>
+
+      <div  ng-controller="myfirstcontroller">
+        <ul>
+            <li ng-repeat="x in something">{{x}}</li>
+        </ul>
+      </div>
+
+    </div><!-- /.container -->
+
+    
+    
 
   </body>
 
 </html>
+
+
+
+
