layout for angular componments (directives complete)

--- a/app/client/src/index.ejs
+++ b/app/client/src/index.ejs
@@ -3,10 +3,13 @@
 
   <head>
     <meta charset = "UTF-8">
+
+    
     <script type="text/javascript" src="libs.js"></script>
     <script type="text/javascript" src="app.js"></script>
+
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css">
-    <link rel="stylesheet" href="css/css.css">
+  
     
 
     <title>James O'Meara</title>
@@ -37,8 +40,8 @@
       </div>
     </nav>
 
-    <div class="container">
 
+    <div class="container">
       <div class="starter-template">
         <h1>Bootstrap starter template</h1>
         <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
@@ -49,9 +52,12 @@
             <li ng-repeat="x in something">{{x}}</li>
         </ul>
       </div>
-
     </div><!-- /.container -->
 
+    
+    <div>
+      <test-directive>
+    </div>
     
     
 
