--- a/app/client/src/index.ejs
+++ b/app/client/src/index.ejs
@@ -50,7 +50,7 @@
         <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
       </div>
 
-      <div  ng-controller="myfirstcontroller">
+      <div  ng-controller="mainController">
         <ul>
             <li ng-repeat="x in something">{{x}}</li>
             {{testVariable}}
