--- a/app/client/src/index.ejs
+++ b/app/client/src/index.ejs
@@ -7,9 +7,9 @@
     <script type="text/javascript" src="libs.js"></script>
     <script type="text/javascript" src="templates.js"></script>
     <script type="text/javascript" src="app.js"></script>
-    
 
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="css/css.css">
 
     <title>James O'Meara</title>
 
@@ -31,15 +31,15 @@
         
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a style="cursor: hand" ng-click="setSection('home')"  >Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li ng-class="{active: isNavbuttonActive(sections.home) }" ><a ng-click="setSection(sections.home)"> Home </a></li>
+            <li ng-class="{active: isNavbuttonActive(sections.two) }" ><a ng-click="setSection(sections.two)"> About </a></li>
+            <li ng-class="{active: isNavbuttonActive(sections.three) }" ><a ng-click="setSection(sections.three)"> Contact </a></li>
           </ul>
           
         </div><!--/.nav-collapse -->
       </div>
     </nav>
-    <p>Section = {{section}}</p>
+    <p>Section = {{selected}}</p>
   </header>
   
 
