added service to commucate between main controller and nav controller

--- a/app/client/src/index.ejs
+++ b/app/client/src/index.ejs
@@ -39,7 +39,7 @@
         </div><!--/.nav-collapse -->
       </div>
     </nav>
-    <p>Section = {{selected}}</p>
+    <p>Section = {{selected()}}</p>
   </header>
   
 
@@ -50,7 +50,7 @@
       <div class="starter-template">
         <h1>Bootstrap starter template</h1>
         <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
-        <p>Section = {{section}}</p>
+        <p>Section = {{currentPage()}}</p>
       </div>
 
       <div  >
