factory created and can pass back and foward to mongodb

--- a/app/client/src/index.ejs
+++ b/app/client/src/index.ejs
@@ -48,9 +48,9 @@
     <div class="container" ng-controller="mainController">
 
       <div class="starter-template">
-        <h1>Bootstrap starter template</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
-        <p>Section = {{currentPage()}}</p>
+        <p>Section = {{ currentPage() }}</p>
+        <p>from database = {{ somethingFromDatabase }}</p>
+        <p> sending to database status: {{ status }} </p>
       </div>
 
       <div  >
