--- a/app/client/src/index.ejs
+++ b/app/client/src/index.ejs
@@ -16,30 +16,7 @@
   </head>
 
   <header ng-controller="navController">
-  
-    <nav class="navbar navbar-inverse navbar-default.navbar-static-top">
-      <div class="container" >
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Project name</a>
-        </div>
-        
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li ng-class="{active: isNavbuttonActive(sections.home) }" ><a ng-click="setSection(sections.home)"> Home </a></li>
-            <li ng-class="{active: isNavbuttonActive(sections.two) }" ><a ng-click="setSection(sections.two)"> About </a></li>
-            <li ng-class="{active: isNavbuttonActive(sections.three) }" ><a ng-click="setSection(sections.three)"> Contact </a></li>
-          </ul>
-          
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
-    <p>Section = {{selected()}}</p>
+    <nav-directive></nav-directive>
   </header>
   
 
@@ -53,12 +30,11 @@
         <p> sending to database status: {{ status }} </p>
       </div>
 
-      <div  >
+      <div >
         <ul>
             <li ng-repeat="x in something">{{x}}</li>
             {{testVariable}}
         </ul>
-        <test-directive>
       </div>
     
       <div>
