created directive to get/post data to/from server

--- a/app/client/src/index.ejs
+++ b/app/client/src/index.ejs
@@ -26,26 +26,11 @@
 
       <div class="starter-template">
         <p>Section = {{ currentPage() }}</p>
-        <p>from database = {{ somethingFromDatabase }}</p>
-        <p> sending to database status: {{ status }} </p>
-      </div>
-
-      <div >
-        <ul>
-            <li ng-repeat="x in something">{{x}}</li>
-            {{testVariable}}
-        </ul>
-      </div>
-    
-      <div>
-        <test-directive>
       </div>
 
       <div>
-        <my-customer>
+        <simple-table-directive>
       </div>
-      
-
 
     </div><!-- /.container -->
 
