--- a/app/client/src/directives/templates/simpleTable.ejs
+++ b/app/client/src/directives/templates/simpleTable.ejs
@@ -9,6 +9,7 @@
             <td>{{ x.name }}</td>
             <td>{{ x.lastname }}</td>
             <td>{{ x.age }}</td>
+            <td><button ng-click = "delete(  x.name , x.lastname , x.age )" >Delete</button></td>
         </tr>
         <tr>
             <td>
