started directives for code editor

--- a/app/client/src/index.ejs
+++ b/app/client/src/index.ejs
@@ -37,6 +37,12 @@
         </div>
     </div><!-- /.container -->
 
+    <div class="container" >
+        <div ng-show="showTab(3)">
+            <tab3-directive>
+        </div>
+    </div><!-- /.container -->
+
   </body>
 
 </html>
