pushing changes to test on server jsfiddle integration

--- a/app/client/src/directives/templates/codeEditorInput-template.ejs
+++ b/app/client/src/directives/templates/codeEditorInput-template.ejs
@@ -2,8 +2,13 @@
 <div>
     <p> Hello World </p>
     <textarea rows="4" cols="50" ng-model="input1">
-        
+         
     </textarea>
+
+    <p ng-bind-html="myText"></p>
+
+  
+
     {{input1}}
     <textarea rows="4" cols="50" ng-model="input2">
         
