added plunker embedded directive

--- a/app/client/src/directives/templates/tab1.ejs
+++ b/app/client/src/directives/templates/tab1.ejs
@@ -1,9 +1,12 @@
-<div>
+
+
+
+
+<div class="container" >
 
     <h1> Home Page </h1>
 
-    <div>
-        <code-editor-directive>
-    </div>
+    
 
-</div>
+
+</div><!-- /.container -->
