--- a/app/client/src/directives/templates/tab2.ejs
+++ b/app/client/src/directives/templates/tab2.ejs
@@ -1,5 +1,8 @@
 
-<div>
+
+
+
+<div class="container" >
     <div class="starter-template">
         <p>Section = {{ currentPage() }}</p>
     </div>
@@ -7,4 +10,4 @@
     <div>
         <simple-table-directive>
     </div>
-</div>
+</div><!-- /.container -->
