--- a/app/client/src/directives/templates/tab3.ejs
+++ b/app/client/src/directives/templates/tab3.ejs
@@ -1,13 +1,12 @@
 
 <div>
-tab3
-    <div class="starter-template">
-        <p>Section = {{ currentPage() }}</p>
-    </div>
+    <div class="container" >
+        <h2>Practice editing here! <h2>
+    </div><!-- /.container -->
+    
+    
     <div>
-        <code-editor-directive>
+    <code-editor-directive>
     </div>
-    <div>
-        <simple-table-directive>
-    </div>
-</div> 
+</div>
+
