added directives to control embedded editors & display pdfs

--- a/app/client/src/directives/templates/navDirective.ejs
+++ b/app/client/src/directives/templates/navDirective.ejs
@@ -14,12 +14,11 @@
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
             <li ng-class="{active: isNavbuttonActive(sections.home) }" ><a ng-click="setSection(sections.home)"> Home </a></li>
-            <li ng-class="{active: isNavbuttonActive(sections.two) }" ><a ng-click="setSection(sections.two)"> About </a></li>
+            <li ng-class="{active: isNavbuttonActive(sections.two) }" ><a ng-click="setSection(sections.two)"> Tutorials </a></li>
             <li ng-class="{active: isNavbuttonActive(sections.three) }" ><a ng-click="setSection(sections.three)"> Editor </a></li>
             </ul>
             
         </div><!--/.nav-collapse -->
         </div>
     </nav>
-    <p>Section = {{selected()}}</p>
 </div>
