--- a/app/client/src/directives/templates/tab2.ejs
+++ b/app/client/src/directives/templates/tab2.ejs
@@ -3,11 +3,11 @@
 
 
 <div class="container" >
-    <div class="starter-template">
-        <p>Section = {{ currentPage() }}</p>
+    <h2> Tutorials </h2>
+    
+    <div>
+        <display-tutorial-directive name=" 'Angular.htm' " >
     </div>
 
-    <div>
-        <simple-table-directive>
-    </div>
+    
 </div><!-- /.container -->
