edited gitignore and working on build script

--- a/app/client/src/directives/templates/tab2.ejs
+++ b/app/client/src/directives/templates/tab2.ejs
@@ -2,12 +2,11 @@
 
 
 
-<div class="container" >
-    <h2> Tutorials </h2>
+<div >
     
     <div>
         <display-tutorial-directive name=" 'Angular.htm' " >
     </div>
 
     
-</div><!-- /.container -->
+</div>
