--- a/app/client/src/directives/templates/displayTutorial.ejs
+++ b/app/client/src/directives/templates/displayTutorial.ejs
@@ -203,18 +203,17 @@
             </style>
             
             <div id="cssmenu">
-            <ul>
-                <li><a ng-click="selectTutorial(tutorials.blank)"><span>Home</span></a></li>
-                <li class="active has-sub"><a href="#"><span>Angular</span></a>
-                    <ul>
-                        <li class="has-sub"><a ng-click="selectTutorial(tutorials.angular)"><span>Angular</span></a></li>
-                        <li class="has-sub"><a ng-click="selectTutorial(tutorials.node)"><span>Node</span></a></li>
-                    </ul>
-                </li>
-                <li><a href="#"><span>About</span></a></li>
-                <li class="last"><a href="#"><span>Contact</span></a></li>
-            </ul>
-            </div></div>
+                <ul>
+                    <li ng-repeat="t in tutorials"><a><span> {{t.name}} </span></a>
+                        <ul>
+                            <li ng-repeat="data in t.data" class="has-sub"><a ng-click="selectTutorial( data.url )"><span> {{data.name}}</span></a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+            
+        </div>
+            
         
 
 
