added simple d3 directive and service exmaple to tab 1

--- a/app/client/src/directives/templates/tab1.ejs
+++ b/app/client/src/directives/templates/tab1.ejs
@@ -11,4 +11,12 @@
         <simple-table-directive>
     </div>
 
+    <div>
+        <force-graph-directive>
+    </div>
+
+    <div>
+        <div my-directive></div>
+    </div>
+
 </div><!-- /.container -->
