--- a/app/client/src/index.ejs
+++ b/app/client/src/index.ejs
@@ -9,6 +9,9 @@
     <script type="text/javascript" src="app.js"></script>
 
 
+    <script src="https://d3js.org/d3.v4.js"></script>
+
+    
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="css/css.css">
 
