--- a/app/client/src/directives/templates/forceGraphTemplate.ejs
+++ b/app/client/src/directives/templates/forceGraphTemplate.ejs
@@ -7,12 +7,14 @@
             fill: none;
             stroke: #666;
             stroke-width: 1.5px;
+            stroke-opacity: 1.0;
         }
 
         .node circle {
             fill: #ccc;
             stroke: 0000FF;
             stroke-width: 1.5px;
+            opacity: 1.0;
         }
 
         text {
@@ -34,7 +36,6 @@
             filter: alpha(opacity=60); /* For IE8 and earlier */
         }
 
-      
 
       
     </style>
