--- a/app/client/src/directives/templates/displayTutorial.ejs
+++ b/app/client/src/directives/templates/displayTutorial.ejs
@@ -1,4 +1,4 @@
-<div>
+<div >
 
         <div class="content">
             <style>@import url(http://fonts.googleapis.com/css?family=Oxygen+Mono);
@@ -204,23 +204,24 @@
 
             <div id="cssmenu">
                 <ul>
-                    <li ng-repeat="t in tutorials"><a ng-click="selectTutorial( t.url )"><span> {{t.name}} </span></a>
+                    <li ng-repeat="t in tutorials"><a ng-click="selectTutorial( t )"><span> {{t.name}} </span></a>
                         <ul>
-                            <li ng-repeat="data in t.data" class="has-sub"><a ng-click="selectTutorial( data.url )"><span> {{data.name}}</span></a></li>
+                            <li ng-repeat="data in t.data" class="has-sub"><a ng-click="selectTutorial( data )"><span> {{data.name}}</span></a></li>
                         </ul>
                     </li>
                 </ul>
             </div>
 
                
-
-            <div ng-if="showDesc(selectedTutorial)">
-                <force-graph-directive>
+            
+            <div ng-if=selectedTutorial.graphData >
+                <force-graph-directive data = selectedTutorial.graphData >
             </div>
 
+            
             <div ng-if="showDoc(selectedTutorial)">
                 <div class="container">
-                    <iframe style="width: 100%; height: 800px" frameborder="0" src={{selectedTutorial}}></iframe>
+                    <iframe style="width: 100%; height: 800px" frameborder="0" src={{selectedTutorial.url}}></iframe>
                 </div>
             </div>
             
