--- a/app/client/src/directives/templates/examplesTemplates/example7.ejs
+++ b/app/client/src/directives/templates/examplesTemplates/example7.ejs
@@ -4,5 +4,5 @@
     <p><b><i>              : &lt;input ng-model="inputString1"&gt;</i></b></p>
     <p><b><i>              : &#123 &#123; inputString1 &#125 &#125;</i></b></p>
     <input ng-model="inputString1" id="example7TextBox">
-    <p><b>2 way data binding: inputString1 = </b>{{ inputString1 }} </p> 
+    <p id="example72wayBinding" ><b>2 way data binding: inputString1 = </b>{{ inputString1 }} </p> 
 <div>
