--- a/app/client/src/directives/templates/tab1.ejs
+++ b/app/client/src/directives/templates/tab1.ejs
@@ -47,6 +47,10 @@
                 <example9-directive></example9-directive>
                 <br><br>
             </li>
+            <li>
+                <simple-table-directive></simple-table-directive>
+                <br><br>
+            </li>
         </ol>
     
 
